--- a/components/Common/Input/Input.module.scss
+++ b/components/Common/Input/Input.module.scss
@@ -32,6 +32,26 @@
     fill: $svg-color;
   }
 
+  .phoneNum {
+    display: flex;
+    
+    .regCode {
+      width: 48px;
+      height: 48px;
+      background: #FFFFFF;
+      border: 1px solid #D9D9D9;
+      border-radius: 6px 0 0 6px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+     
+
+    input {
+      border-radius: 0 6px 6px 0;
+    }
+  }
+
   p {
     display: inline-block;
     font-family: 'Roboto';
