--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -28,3 +28,6 @@ $profile-bg-color: #D0D9F2;
 $login-prod-name: #6495ED;
 $login-link-color: #6495ED;
 $login-link-hover: #035bff;
+
+// * rating
+$rating-numbers: #6495ED;
