--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,100 +1,99 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .header {
-  width: 100%;
-  height: 120px;
-  padding: 0 35px;
-  background-color: #fdfafa;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-
-  .logo {
+    width: 100%;
+    height: 120px;
+    padding: 0 35px;
+    background-color: #fdfafa;
     display: flex;
-    font-family: 'Neucha';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 30px;
-    line-height: 33px;
-    display: flex;
+    justify-content: center;
     align-items: center;
-    color: #000000;
-
-    svg {
-      margin-right: 4px;
-    }
-
-    a {
-      &:hover {
-        color: $link-color-hover;
-      }
-    }
-  }
-
-  .rightBlock {
     display: flex;
+    justify-content: space-between;
 
-    .search {
-      position: relative;
-      input {
-        background: rgba(196, 196, 196, 0.15);
-        border-radius: 8px;
-        width: 433px;
-        height: 40px;
-        padding-left: 45px;
-        margin-right: 35px;
-        outline: none;
-        border: none;
-      }
-
-      svg {
-        position: absolute;
-        left: 17px;
-        top: 8px;
-      }
-    }
-
-    ul {
-      display: flex;
-      align-items: center;
-
-      li {
+    .logo {
         display: flex;
+        font-family: "Neucha";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 30px;
         align-items: center;
-        cursor: pointer;
-      }
-      img {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        margin-left: 30px;
-      }
+        color: #000000;
+
+        svg {
+            margin-right: 4px;
+        }
+
+        a {
+            padding-top: 5px;
+            &:hover {
+                color: $link-color-hover;
+            }
+        }
     }
-  }
+
+    .rightBlock {
+        display: flex;
+
+        .search {
+            position: relative;
+            input {
+                background: rgba(196, 196, 196, 0.15);
+                border-radius: 8px;
+                width: 433px;
+                height: 40px;
+                padding-left: 45px;
+                margin-right: 35px;
+                outline: none;
+                border: none;
+            }
+
+            svg {
+                position: absolute;
+                left: 17px;
+                top: 8px;
+            }
+        }
+
+        ul {
+            display: flex;
+            align-items: center;
+
+            li {
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+            }
+            img {
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                margin-left: 30px;
+            }
+        }
+    }
 }
 
 .burger {
-  display: none !important;
+    display: none !important;
 }
 
 .svgColor {
-  fill: $svg-color;
+    fill: $svg-color;
 }
 
 @media (max-width: 1280px) {
-  .header {
-    .logo {
-      margin: 0 auto;
+    .header {
+        .logo {
+            margin: 0 auto;
+        }
+        background-color: #fff;
+        .rightBlock {
+            display: none;
+        }
     }
-    background-color: #fff;
-    .rightBlock {
-      display: none;
-    }
-  }
 
-  .burger {
-    display: block !important;
-  }
+    .burger {
+        display: block !important;
+    }
 }
