--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -25,6 +25,11 @@
         float: right;
         margin-top: 75px;
         margin-bottom: 35px;
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 14px;
     }
 
     h3 {
@@ -230,14 +235,14 @@
 }
 
 .achieves {
-    // display: flex;
-    // justify-content: space-between;
     background: #ffffff;
     border-radius: 8px;
-    max-width: 600px;
     padding: 40px;
     margin-bottom: 30px;
     max-height: 300px;
+    margin-top: 21px;
+    max-width: 1083px;
+    width: 100%;
 }
 
 .inputBlock {
