--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -6,9 +6,8 @@
     background: #e5e5e5;
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
+    height: calc(100vh - 120px);
     padding: 40px;
-    padding-right: 0;
     margin-right: 20px;
 
     .column {
@@ -48,7 +47,7 @@
 
     .rightBlock {
         margin-left: 20px;
-        max-width: 600px;
+        max-width: 638px;
         width: 100%;
 
         .title {
@@ -241,12 +240,10 @@
     margin-bottom: 30px;
     max-height: 300px;
     margin-top: 21px;
-    max-width: 1083px;
     width: 100%;
 }
 
 .inputBlock {
-    width: 600px;
     height: 100%;
     background: #fff;
     margin-bottom: 30px;
@@ -358,7 +355,41 @@
 .svgColor {
     fill: $svg-color;
 }
+.work {
+    background: #ffffff;
+    border-radius: 8px;
+    width: 100%;
 
+    .header {
+        display: flex;
+        align-items: center;
+        margin-left: 17px;
+        margin-top: 24px;
+
+        h3 {
+            margin: 0;
+            padding: 0;
+            margin-right: 14px;
+        }
+        button {
+            border: none;
+            width: 31px;
+            height: 31px;
+            padding: 0;
+        }
+    }
+
+    .exp {
+        padding: 51px;
+
+        pre {
+            background: #d0d9f2;
+            border-radius: 8px;
+            overflow-wrap: break-word;
+            margin-bottom: 40px;
+        }
+    }
+}
 @media (max-width: 1280px) {
     .profile {
         background-color: #fff;
