--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -7,8 +7,8 @@
     display: flex;
     flex-wrap: wrap;
     height: calc(100vh - 120px);
-    padding: 40px;
     margin-right: 20px;
+    padding: 40px;
 
     .column {
         display: flex;
@@ -359,6 +359,7 @@
     background: #ffffff;
     border-radius: 8px;
     width: 100%;
+    position: relative;
 
     .header {
         display: flex;
@@ -416,6 +417,36 @@
                 }
             }
         }
+    }
+}
+
+.addWorkExp {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    padding: 50px;
+    background: #ffffff;
+    box-shadow: 0px 8px 26px 1px rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+
+    button {
+        float: right;
+    }
+
+    h2 {
+        margin: 0;
+    }
+
+    .input {
+        margin-bottom: 20px;
+    }
+
+    .textarea {
+        height: 335px;
+        width: 100%;
+        border: 2px solid #c4c4c4;
+        border-radius: 8px;
     }
 }
 @media (max-width: 1280px) {
