--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -13,10 +13,16 @@
 
     .logo {
         display: flex;
-        font-family: "Neucha";
-        font-style: normal;
-        font-weight: normal;
-        font-size: 30px;
+
+        a {
+            font-family: "Barlow Semi Condensed", sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 30px;
+            line-height: 36px;
+            margin-bottom: 8px;
+        }
+
         align-items: center;
         color: #000000;
 
