--- a/components/vacancies/vacancies.module.scss
+++ b/components/vacancies/vacancies.module.scss
@@ -1,112 +1,139 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .vacancies {
-  padding: 20px;
-  padding-top: 34px;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
+    padding: 20px;
+    padding-top: 34px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .vacan {
-  margin-top: 10px;
-  width: 300px;
-  background-color: #fff;
-  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  padding: 15px;
-
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-  }
-
-  .title {
-    margin-top: 15px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;
-    /* identical to box height */
-
-    display: flex;
-  }
-
-  .desc {
     margin-top: 10px;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 14px;
-    display: flex;
-    align-items: center;
-    height: 56px;
+    width: 300px;
+    background-color: #fff;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 15px;
+    cursor: pointer;
+    transition: 0.2s;
 
-    color: #696f79;
-  }
+    &:hover {
+        transition: 0.2s;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
 
-  .logo {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
+    .header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+    }
+
+    .title {
+        margin-top: 15px;
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 19px;
+        /* identical to box height */
+
+        display: flex;
+    }
+
+    .desc {
+        margin-top: 10px;
+        font-family: "Roboto";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 14px;
+        display: flex;
+        align-items: center;
+        height: 56px;
+
+        color: #696f79;
+    }
+
+    .logo {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
 }
 
 .buttons {
-  margin-top: 18px;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+    margin-top: 18px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .button {
-  width: 125px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 14px;
-  padding: 10px 13px;
+    width: 125px;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    padding: 10px 13px;
 }
 
 .response {
-  transition: 0.2s;
-  background-color: $button-bg-hover;
-  color: #fff;
-  cursor: auto;
+    transition: 0.2s;
+    background-color: $button-bg-hover;
+    color: #fff;
+    cursor: auto;
 }
 
 .good {
-  background-color: rgb(11, 255, 141);
-  border: none;
-
-  &:hover {
     background-color: rgb(11, 255, 141);
-  }
+    border: none;
+
+    &:hover {
+        background-color: rgb(11, 255, 141);
+    }
 }
 
 .elipses {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
 }
 
 .elipse {
-  background: $vacan-bg-color;
-  border-radius: 15px;
-  color: $vacan-text-color;
-  padding: 5px;
-  font-size: 10px;
-  line-height: 12px;
+    background: $vacan-bg-color;
+    border-radius: 15px;
+    color: $vacan-text-color;
+    padding: 5px;
+    font-size: 10px;
+    line-height: 12px;
+}
+
+.answ {
+    transition: 0.2s;
+    background-color: $button-color-hover;
+    color: $button-color;
+    cursor: pointer;
+
+    &:hover {
+        transition: 0.2s;
+        background-color: $button-color;
+        color: #fff;
+    }
+}
+
+.responded {
+    transition: 0.2s;
+    background-color: $button-bg-hover;
+    color: #fff;
+    cursor: auto;
 }
