--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -357,31 +357,13 @@
 }
 .work {
     background: #ffffff;
-    border-radius: 8px;
+    border-radius: 0 0 8px 8px;
     width: 100%;
     position: relative;
 
-    .header {
-        display: flex;
-        align-items: center;
-        margin-left: 17px;
-        margin-top: 24px;
-
-        h3 {
-            margin: 0;
-            padding: 0;
-            margin-right: 14px;
-        }
-        button {
-            border: none;
-            width: 31px;
-            height: 31px;
-            padding: 0;
-        }
-    }
-
     .exp {
         padding: 51px;
+        padding-top: 0;
         .content {
             display: flex;
             flex-direction: column;
@@ -391,6 +373,7 @@
             margin-bottom: 40px;
             .header {
                 display: flex;
+                align-items: flex-start;
                 .blue {
                     font-family: "Montserrat";
                     font-style: normal;
@@ -402,6 +385,9 @@
                     color: #ffffff;
                     background: #6495ed;
                     border-radius: 8px;
+                    margin: 0;
+                    margin-top: 20px;
+                    margin-left: 27px;
                 }
                 .white {
                     font-family: "Montserrat";
@@ -414,8 +400,41 @@
                     color: #6495ed;
                     background: #ffffff;
                     border-radius: 8px;
+                    margin: 0;
+                    margin-left: 27px;
+                    margin-top: 20px;
                 }
             }
+        }
+    }
+}
+
+.bottomBlock {
+    width: 100%;
+    .tabs {
+        display: flex;
+        align-items: center;
+        padding-left: 17px;
+        margin-top: 24px;
+        background-color: #fff;
+        border-radius: 8px 8px 0 0;
+        padding-top: 24px;
+        padding-bottom: 24px;
+
+        h3 {
+            margin: 0;
+            padding: 0;
+            margin-right: 14px;
+            margin-left: 37px;
+            cursor: pointer;
+        }
+
+        button {
+            border: none;
+            width: 31px;
+            height: 31px;
+            padding: 0;
+            cursor: pointer;
         }
     }
 }
