--- a/components/News/Event.module.scss
+++ b/components/News/Event.module.scss
@@ -84,6 +84,7 @@
         position: relative;
         padding-left: 20px;
         margin-bottom: 5px;
+        margin-left: 60px;
     }
 
     li::before {
