feat(mainPage): fix font in rating title

--- a/components/Main/Rating.module.scss
+++ b/components/Main/Rating.module.scss
@@ -2,11 +2,11 @@
 
 .rating {
     width: 100%;
+    line-height: 22px;
     font-family: "Montserrat";
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 18px;
-    line-height: 22px;
     padding: 37px;
     color: #000000;
     overflow-x: hidden;
