--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -15,6 +15,10 @@
         flex-direction: column;
     }
 
+    .flex {
+        display: flex;
+    }
+
     .saveBtn {
         width: 173px;
         height: 44px;
