--- a/components/Profile/profile.module.scss
+++ b/components/Profile/profile.module.scss
@@ -246,6 +246,17 @@
     max-height: 300px;
     margin-top: 21px;
     width: 100%;
+
+    .button {
+        border: none;
+        background-color: transparent;
+        height: 115px !important;
+        width: 115px !important;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
 }
 
 .inputBlock {
