--- a/components/Login/Login.module.scss
+++ b/components/Login/Login.module.scss
@@ -1,126 +1,132 @@
-@import '../../styles/variables';
+@import "../../styles/variables";
 
 .background {
-  width: 100%;
-  background: #fff;
-  padding-top: 75px;
+    width: 100%;
+    background: #fff;
+    padding-top: 75px;
 }
 
 .login {
-  max-width: 425px;
-  margin: 0 auto;
-  .header {
-    margin-bottom: 10px;
-    h1 {
-      display: block;
-      max-width: 425px;
-      font-family: 'Montserrat';
-      font-style: normal;
-      font-weight: normal;
-      font-size: 30px;
-      line-height: 44px;
-      letter-spacing: -0.64px;
-      color: #032d23;
-      margin: 0;
-    }
-    span {
-      color: $login-prod-name;
-      font-family: 'Montserrat';
-      font-style: normal;
-      font-weight: normal;
-      font-size: 30px;
-      line-height: 44px;
-      letter-spacing: -0.64px;
-    }
-  }
-
-  .checkboxPassword {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 34px;
-    letter-spacing: -0.33px;
-    color: #032d23;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 40px 0;
-
-    p {
-      margin: 0;
+    max-width: 425px;
+    margin: 0 auto;
+    .header {
+        margin-bottom: 10px;
+        h1 {
+            display: block;
+            max-width: 425px;
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 30px;
+            line-height: 44px;
+            letter-spacing: -0.64px;
+            color: #032d23;
+            margin: 0;
+        }
+        span {
+            color: $login-prod-name;
+            font-family: "Montserrat";
+            font-style: normal;
+            font-weight: normal;
+            font-size: 30px;
+            line-height: 44px;
+            letter-spacing: -0.64px;
+        }
     }
 
-    .checkText {
-      display: flex;
-      align-items: center;
-
-      span {
-        margin-right: 10px;
-        font-family: 'Roboto';
+    .checkboxPassword {
+        font-family: "Roboto";
         font-style: normal;
-        font-weight: 400;
+        font-weight: normal;
         font-size: 18px;
-        line-height: 21px;
-        color: #696F79;
-      }
+        line-height: 34px;
+        letter-spacing: -0.33px;
+        color: #032d23;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 40px 0;
+
+        p {
+            margin: 0;
+        }
+
+        label {
+            .remember {
+                margin-left: 10px;
+            }
+        }
+
+        .checkText {
+            display: flex;
+            align-items: center;
+
+            .check {
+                margin-left: 10px;
+                font-family: "Roboto";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 21px;
+                color: #696f79;
+            }
+        }
     }
-  }
 
-  .footer {
-    margin-top: 30px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 34px;
-    letter-spacing: -0.33px;
-    color: #032d23;
+    .footer {
+        margin-top: 30px;
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 34px;
+        letter-spacing: -0.33px;
+        color: #032d23;
 
-    .link {
-      transition: 0.2s;
-      cursor: pointer;
-      margin-left: 20px;
-      font-weight: 600;
-      padding-bottom: 300px;
-      border: none;
-      background-color: transparent;
-      color: $login-link-color;
+        .link {
+            transition: 0.2s;
+            cursor: pointer;
+            margin-left: 20px;
+            font-weight: 600;
+            padding-bottom: 300px;
+            border: none;
+            background-color: transparent;
+            color: $login-link-color;
 
-      &:hover {
-        color: $login-link-hover ;
-      }
+            &:hover {
+                color: $login-link-hover;
+            }
+        }
     }
-  }
 }
 
 .error {
-  color: red;
+    color: red;
 }
 
 .popup {
-  position: fixed;
-  width: 800px;
-  top: 20px;
-  height: 500px;
-  overflow-y: scroll;
-  background: rgb(185, 185, 185);
-  left: 100px;
+    position: fixed;
+    width: 800px;
+    top: 20px;
+    height: 500px;
+    overflow-y: scroll;
+    background: rgb(185, 185, 185);
+    left: 100px;
 }
 
 @media (max-width: 540px) {
-  .login {
-    max-width: 425px;
-    margin: 0 auto;
-    width: 90%;
-    .header {
-      margin-bottom: 10px;
-      h1 {
-        font-size: 23px;
-      }
-      span {
-        font-size: 23px;
-      }
+    .login {
+        max-width: 425px;
+        margin: 0 auto;
+        width: 90%;
+        .header {
+            margin-bottom: 10px;
+            h1 {
+                font-size: 23px;
+            }
+            span {
+                font-size: 23px;
+            }
+        }
     }
-  }
 }
