--- a/components/News/Event.module.scss
+++ b/components/News/Event.module.scss
@@ -126,6 +126,14 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+
+
+        p {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
     }
 
     svg {
@@ -146,7 +154,9 @@
 
 .event_name {
     display: none;
+
 }
+
 
 .buttons {
     display: flex;
@@ -165,6 +175,7 @@
         flex-direction: column-reverse;
         padding: 0;
         background-color: #fff;
+
         .card {
             background-color: #fff;
             width: 100%;
@@ -198,6 +209,7 @@
             display: block;
             height: auto;
             padding-bottom: 15px;
+
             ul {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
@@ -218,6 +230,14 @@
                 font-size: 30px;
                 line-height: 35px;
                 margin-bottom: 16px;
+
+                ul {
+                    p {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                    }
+                }
             }
 
             button {
