--- a/components/News/News.module.scss
+++ b/components/News/News.module.scss
@@ -1,26 +1,32 @@
 .news {
-  width: 100%;
-  height: calc(100vh - 120px);
-  padding-left: 45px;
-  padding-top: 45px;
-  background-color: #e5e5e5;
-  overflow-y: auto;
-
-  ul {
-    display: flex;
-    flex-wrap: wrap;
+    width: 100%;
+    height: calc(100vh - 120px);
+    padding-left: 45px;
+    padding-top: 45px;
+    background-color: #e5e5e5;
+    overflow-y: auto;
+    display: grid;
+    grid-template-columns: auto auto auto;
     justify-content: space-around;
-  }
+    align-items: center;
+    flex-wrap: wrap;
+
+
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
 }
 
 @media (max-width: 1280px) {
-  .news {
-    padding: 0;
+    .news {
+        padding: 0;
 
-    ul {
-      align-items: center;
-      flex-direction: column;
-      justify-content: center;
+        ul {
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+        }
     }
-  }
 }
