--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -13,6 +13,7 @@
 
     .logo {
         display: flex;
+        margin-left: 16px;
 
         a {
             font-family: "Barlow Semi Condensed", sans-serif;
